# HIP-Quant

./: .gitignore  AGENTS.md  DOCUMENTATION.md  LICENSE  MANIFEST.in  PYTORCH_EXTENSION_PLAN.md  README.md  TODO.md  __init__.py  __main__.py  build.ps1  build.sh  cdna_compat.py  device_info.py  diagnose_fp8_crash.py  hip_iquant_util.h  hip_quant_types.h  hip_quant_util.h  hip_quantize.cpp  hip_quantize.lib  pyproject.toml  setup.py  setup_torch.py  test_parity.py  test_tq.py  torch_api.py
hip_quant.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kernels/: fp8_expand.cu  fp8_gemm_test.cu  quant_f8_e4m3.cu  quant_f8_e5m2.cu  quant_iq1_s.cu  quant_iq2_xs.cu  quant_iq2_xxs.cu  quant_iq3_s.cu  quant_iq3_xxs.cu  quant_iq4_nl.cu  quant_q2_K.cu  quant_q3_K.cu  quant_q4_1.cu  quant_q5_K.cu  quant_q6_K.cu  quant_q8_1.cu  quant_tq1_0.cu  quant_tq2_0.cu
src/hip_quant/: __init__.py  __main__.py  build.ps1  build.py  hip_quant_iq2xxs_data.h  hip_quant_iq3s_data.h  hip_quant_iq3xxs_data.h  hip_quant_types.h  hip_quant_util.h  hip_quantize.cpp
src/hip_quant/kernels/: quant_iq2_xs.cu  quant_iq2_xxs.cu  quant_iq3_xxs.cu  quant_iq4_xs.cu  quant_q4_0.cu  quant_q4_K.cu  quant_q5_0.cu  quant_q5_1.cu  quant_q8_0.cu
tests/: test_all.py  test_compat.py  test_pipeline.py
tests/torch/: bench_compare.py  bench_fp8.py  conftest.py  test_fp8.py
torch_ext/: fp8_linear_kernels.hip  fp8_quant_kernels.hip  pytorch_bindings.cpp
