[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hip-quant"
version = "0.3.0"
description = "HIP/ROCm 7.1 Quantization library for AMD GPUs"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
torch = [
    "torch>=2.0"
]

[project.scripts]
hip-quant = "hip_quant.__main__:main"

[tool.setuptools]
packages = ["hip_quant"]

[tool.setuptools.package-dir]
"hip_quant" = "."

[tool.setuptools.package-data]
"hip_quant" = [
    "hip_quantize.dll",
    "*.h",
    "*.cpp",
    "build.ps1",
    "kernels/*",
    "torch_ext/*",
    "torch_api.py",
    "setup_torch.py",
    "tests/torch/*.py",
]
