[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hip-quant"
version = "0.4.8"
description = "HIP/ROCm quantization library for AMD GPUs"
readme = "README.md"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
torch = [
    "torch>=2.0"
]

[project.scripts]
hip-quant = "hip_quant.__main__:main"

[tool.setuptools]
packages = ["hip_quant"]

[tool.setuptools.package-dir]
"hip_quant" = "."

[tool.setuptools.package-data]
"hip_quant" = [
    "hip_quantize.dll",
    "hip_quantize_rocm721.dll",
    "libhip_quantize.so",
    "*.h",
    "*.cpp",
    "build.ps1",
    "build.sh",
    "kernels/*.cu",
    "torch_ext/*.hip",
    "torch_ext/pytorch_bindings.cpp",
    "torch_api.py",
    "device_info.py",
    "cdna_compat.py",
    "setup_torch.py",
    "tests/*.py",
    "tests/torch/*.py",
]
